--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1277,3 +1277,8 @@ input[type="number"]::-webkit-inner-spin-button {
 .verTarea {
     cursor: pointer;
 }
+.generarPromedio{
+    display:flex;
+    flex-direction: row-reverse;
+    
+}
