--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1292,6 +1292,8 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 .GenerarCont p{
    margin: auto 0;
+   font-size: 16px;
+   font-weight: bold;
 }
 .btnGenerar{
     background-color: var(--color);
@@ -1302,4 +1304,11 @@ input[type="number"]::-webkit-inner-spin-button {
     width: 110px;
     height: 35px;
     cursor: pointer;
+}
+
+.redA{
+    color:red;
+}
+.greenA{
+    color:green;
 }
