--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1322,3 +1322,8 @@ input[type="number"]::-webkit-inner-spin-button {
     font-size: 15px;
     margin: 0;
 }
+
+.trashTarea {
+    display: flex;
+    flex-direction: row-reverse;
+}
