--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -835,6 +835,44 @@ textarea {
     height: 38px;
 }
 
+.btn-primary {
+    color: rgb(232, 230, 227)!important;
+    background-color: rgb(2, 80, 196)!important;
+    border-color: rgb(1, 71, 174)!important;
+}
+
+.btn-success {
+    color: rgb(232, 230, 227)!important;
+    background-color: green !important;
+    border-color: green !important;
+}
+
+.btn-danger {
+    color: rgb(232, 230, 227)!important;
+    background-color: red !important;
+    border-color: red!important;
+}
+
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
 .btn_crearClase {
     background-color: var(--color);
     border: none;
