--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1363,6 +1363,6 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 .trashTarea {
-    display: flex;
-    flex-direction: row-reverse;
+    position: absolute;
+    right: 10px;
 }
