--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -836,21 +837,21 @@ textarea {
 }
 
 .btn-primary {
-    color: rgb(232, 230, 227)!important;
-    background-color: rgb(2, 80, 196)!important;
-    border-color: rgb(1, 71, 174)!important;
+    color: rgb(232, 230, 227) !important;
+    background-color: rgb(2, 80, 196) !important;
+    border-color: rgb(1, 71, 174) !important;
 }
 
 .btn-success {
-    color: rgb(232, 230, 227)!important;
+    color: rgb(232, 230, 227) !important;
     background-color: green !important;
     border-color: green !important;
 }
 
 .btn-danger {
-    color: rgb(232, 230, 227)!important;
+    color: rgb(232, 230, 227) !important;
     background-color: red !important;
-    border-color: red!important;
+    border-color: red !important;
 }
 
 .btn {
@@ -1365,4 +1366,18 @@ input[type="number"]::-webkit-inner-spin-button {
 .trashTarea {
     position: absolute;
     right: 10px;
+}
+
+.notification-site {
+    font-size: 14px;
+    border-bottom: 1px solid var(--background);
+    width: 230px;
+    text-align: left;
+
+}
+
+.elipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
