--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -151,7 +151,7 @@ details {
 
 .router-link {
     text-decoration: none !important;
-    color: var(--colorLetra);
+    color: whitesmoke !important;
 }
 
 .sidebarOption:hover {
